补充固定效应

--- a/book_parts/stats/03-linear_reg.ipynb
+++ b/book_parts/stats/03-linear_reg.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9a3b7f11",
    "metadata": {},
    "outputs": [
@@ -82,7 +82,7 @@
        "       dtype='object'))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "57b6d494",
    "metadata": {},
    "outputs": [],
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1fa0eaf3",
    "metadata": {},
    "outputs": [],
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "e926a7e9",
    "metadata": {},
    "outputs": [
@@ -207,8 +207,8 @@
       "Dep. Variable:                   wage   R-squared:                       0.364\n",
       "Model:                            OLS   Adj. R-squared:                  0.359\n",
       "Method:                 Least Squares   F-statistic:                     74.40\n",
-      "Date:                Sun, 12 May 2024   Prob (F-statistic):           7.30e-50\n",
-      "Time:                        16:34:24   Log-Likelihood:                -1314.2\n",
+      "Date:                Thu, 12 Dec 2024   Prob (F-statistic):           7.30e-50\n",
+      "Time:                        03:11:57   Log-Likelihood:                -1314.2\n",
       "No. Observations:                 526   AIC:                             2638.\n",
       "Df Residuals:                     521   BIC:                             2660.\n",
       "Df Model:                           4                                         \n",
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "id": "617608d6",
    "metadata": {},
    "outputs": [
@@ -351,7 +351,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -362,6 +362,355 @@
     "\n",
     "# 显示列名\n",
     "gpa1_data.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "44e9a864",
+   "metadata": {},
+   "source": [
+    "## 固定效应\n",
+    "\n",
+    "更进一步，我们可以使用 `linearmodels`来完成基准回归，并且加入固定效应\n",
+    "\n",
+    "安装：\n",
+    "\n",
+    "在Jupyter Notebook的python单元格中执行如下代码，注意开头有个感叹号：\n",
+    "\n",
+    "`!pip install linearmodels`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18306782",
+   "metadata": {},
+   "source": [
+    "### 数据准备\n",
+    "\n",
+    "这里使用来自statsmodels的数据集 [grunfeld](https://www.statsmodels.org/stable/datasets/generated/grunfeld.html) ：“The Determinants of Corporate Investment”"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "5aad6159",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>invest</th>\n",
+       "      <th>value</th>\n",
+       "      <th>capital</th>\n",
+       "      <th>firm</th>\n",
+       "      <th>year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>317.6</td>\n",
+       "      <td>3078.5</td>\n",
+       "      <td>2.8</td>\n",
+       "      <td>General Motors</td>\n",
+       "      <td>1935.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>391.8</td>\n",
+       "      <td>4661.7</td>\n",
+       "      <td>52.6</td>\n",
+       "      <td>General Motors</td>\n",
+       "      <td>1936.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>410.6</td>\n",
+       "      <td>5387.1</td>\n",
+       "      <td>156.9</td>\n",
+       "      <td>General Motors</td>\n",
+       "      <td>1937.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>257.7</td>\n",
+       "      <td>2792.2</td>\n",
+       "      <td>209.2</td>\n",
+       "      <td>General Motors</td>\n",
+       "      <td>1938.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>330.8</td>\n",
+       "      <td>4313.2</td>\n",
+       "      <td>203.4</td>\n",
+       "      <td>General Motors</td>\n",
+       "      <td>1939.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   invest   value  capital            firm    year\n",
+       "0   317.6  3078.5      2.8  General Motors  1935.0\n",
+       "1   391.8  4661.7     52.6  General Motors  1936.0\n",
+       "2   410.6  5387.1    156.9  General Motors  1937.0\n",
+       "3   257.7  2792.2    209.2  General Motors  1938.0\n",
+       "4   330.8  4313.2    203.4  General Motors  1939.0"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from statsmodels.datasets import grunfeld\n",
+    "\n",
+    "data = grunfeld.load_pandas().data\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6aed01c0",
+   "metadata": {},
+   "source": [
+    "首先把表示个体和时间的列（准备要控制的固定效应）都转为index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "98cacb4c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>invest</th>\n",
+       "      <th>value</th>\n",
+       "      <th>capital</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>firm</th>\n",
+       "      <th>year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">General Motors</th>\n",
+       "      <th>1935.0</th>\n",
+       "      <td>317.6</td>\n",
+       "      <td>3078.5</td>\n",
+       "      <td>2.8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1936.0</th>\n",
+       "      <td>391.8</td>\n",
+       "      <td>4661.7</td>\n",
+       "      <td>52.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1937.0</th>\n",
+       "      <td>410.6</td>\n",
+       "      <td>5387.1</td>\n",
+       "      <td>156.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1938.0</th>\n",
+       "      <td>257.7</td>\n",
+       "      <td>2792.2</td>\n",
+       "      <td>209.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1939.0</th>\n",
+       "      <td>330.8</td>\n",
+       "      <td>4313.2</td>\n",
+       "      <td>203.4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                       invest   value  capital\n",
+       "firm           year                           \n",
+       "General Motors 1935.0   317.6  3078.5      2.8\n",
+       "               1936.0   391.8  4661.7     52.6\n",
+       "               1937.0   410.6  5387.1    156.9\n",
+       "               1938.0   257.7  2792.2    209.2\n",
+       "               1939.0   330.8  4313.2    203.4"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = data.set_index([\"firm\", \"year\"])\n",
+    "data.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "73414874",
+   "metadata": {},
+   "source": [
+    "### 进行回归\n",
+    "\n",
+    "考虑企业投资的决定，我们设置2个回归模型：\n",
+    "\n",
+    "1. 不带有固定效应:\n",
+    "$$\n",
+    "invest_{it} = \\beta_0 + \\beta_1 value_{it} + \\beta_2 capital_{it} + \\varepsilon_{it}\n",
+    "$$\n",
+    "\n",
+    "2. 带有个体和时间固定效应，其中$\\nu_i$，$\\lambda_t$分代表个体和时间：\n",
+    "$$\n",
+    "invest_{it} = \\beta_0 + \\beta_1 value_{it} + \\beta_2 capital_{it} + \\nu_i + \\lambda_t +  \\varepsilon_{it}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d33bfa7d",
+   "metadata": {},
+   "source": [
+    "要控制固定效应，只要在公式中添加 `EntityEffects`或`TimeEffects` 即可。拟合两个模型："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "569c93f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from linearmodels import PanelOLS\n",
+    "\n",
+    "# 无固定效应\n",
+    "m1 = PanelOLS.from_formula(\n",
+    "    \"invest ~ 1 + value + capital\", data=data\n",
+    ").fit()\n",
+    "\n",
+    "\n",
+    "# 有固定效应\n",
+    "m2 = PanelOLS.from_formula(\n",
+    "    \"invest ~ 1 + value + capital + EntityEffects + TimeEffects\", data=data\n",
+    ").fit()\n",
+    "\n",
+    "\n",
+    "# 有固定效应，聚类到个体\n",
+    "m3 = PanelOLS.from_formula(\n",
+    "    \"invest ~ 1 + value + capital + EntityEffects + TimeEffects\", data=data\n",
+    ").fit(cov_type=\"clustered\", cluster_entity=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5da7bec8",
+   "metadata": {},
+   "source": [
+    "比较结果："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "fd1aa36a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                          Model Comparison                         \n",
+      "===================================================================\n",
+      "                                   OLS             FE    FE-cluster\n",
+      "-------------------------------------------------------------------\n",
+      "Dep. Variable                   invest         invest        invest\n",
+      "Estimator                     PanelOLS       PanelOLS      PanelOLS\n",
+      "No. Observations                   220            220           220\n",
+      "Cov. Est.                   Unadjusted     Unadjusted     Clustered\n",
+      "R-squared                       0.8179         0.7253        0.7253\n",
+      "R-Squared (Within)              0.7357         0.7566        0.7566\n",
+      "R-Squared (Between)             0.8426         0.7944        0.7944\n",
+      "R-Squared (Overall)             0.8179         0.7856        0.7856\n",
+      "F-statistic                     487.28         248.15        248.15\n",
+      "P-value (F-stat)                0.0000         0.0000        0.0000\n",
+      "=====================     ============   ============   ===========\n",
+      "Intercept                      -38.410        -72.394       -72.394\n",
+      "                             (-4.5654)      (-5.6861)     (-3.5000)\n",
+      "value                           0.1145         0.1167        0.1167\n",
+      "                              (20.753)       (9.0219)      (10.368)\n",
+      "capital                         0.2275         0.3514        0.3514\n",
+      "                              (9.3904)       (16.696)      (7.4836)\n",
+      "======================= ============== ============== =============\n",
+      "Effects                                        Entity        Entity\n",
+      "                                                 Time          Time\n",
+      "-------------------------------------------------------------------\n",
+      "\n",
+      "T-stats reported in parentheses\n"
+     ]
+    }
+   ],
+   "source": [
+    "from linearmodels.panel.results import compare\n",
+    "\n",
+    "print(compare(results = {'OLS':m1,\"FE\":m2, 'FE-cluster':m3}))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2587b0c3",
+   "metadata": {},
+   "source": [
+    "注意到\n",
+    "1. 2个“FE”列的最下方，显示这2个模型已经控制了个体和时间固定效应。\n",
+    "2. Cov. Est.行， 显示FE-Cluster模型使用了聚类标准误。\n"
    ]
   }
  ],
@@ -381,7 +730,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.7"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
