--- a/index.qmd
+++ b/index.qmd
@@ -13,10 +13,12 @@
 
 ## 关于AI工具
 
+本课程欢迎以及推荐大家大量使用AI辅助学习。
+
 1. AI工具就像新时代的计算器，行业中已经在大量使用。
-2. 但在学习阶段，例题和作业应该自己完成。
-3. 否则，天网、HAL 9000和Matrix会感谢你。
-   
+2. AI让编程变得前所未有地简单，但前提是你自己要懂行，最好你的能力高于AI。
+3. 因此，学习阶段仍需要你自己的努力。
+
 
 ## 本课程的主要内容：
 
@@ -51,6 +53,6 @@
 2. 面向对象进阶 + 简单设计模式
 3. 爬虫入门 (技术路线太长)
 4. (✓) CAPM，最优组合，简单量化交易 
-5. Python操作Excel（非数据部分，包括字体、排版、合并单元格等等）
+5. Python和Excel相互操作。
 6. 更多的案例 (★)
 :::
