--- a/book_parts/python_basics/06-function.qmd
+++ b/book_parts/python_basics/06-function.qmd
@@ -1,11 +1,21 @@
-
-
 # 函数
 
 :::{.callout-note}
 1. 递归和函数式编程是进阶内容，看进度。
 2. 匿名函数可以介绍。
 :::
+
+在本章中，你将学习到：
+
+*   **什么是函数？** 理解函数的概念、作用以及它如何帮助我们编写更高效、更易读的代码。
+*   **如何定义和调用函数？** 掌握 `def` 关键字、函数名、参数、函数体和 `return` 语句的基本语法。
+*   **参数的多种玩法：** 学习位置参数、关键字参数、默认参数，以及如何处理不定数量的参数 (`*args` 和 `**kwargs`)。
+*   **变量在函数中的“地盘”——作用域：** 理解局部变量、全局变量以及LEGB规则。
+*   **函数与数据类型的互动：** 了解当可变与不可变类型作为参数传递给函数时会发生什么。
+*   **(进阶) 递归的初步认识：** 函数如何调用自身来解决特定问题。
+*   **(进阶) 函数式编程的魅力：** 初探 `map`、`filter`、`lambda` 表达式等强大的工具，以及高阶函数和闭包的概念。
+
+通过学习本章，你将能够将复杂的任务分解为一个个小巧而强大的函数，让你的代码更具结构化、模块化，也为后续更复杂的数据分析任务打下坚实的基础。让我们开始探索函数的奇妙世界吧！
 
 首先，Python中的函数基本上可以类比我们熟悉的数学函数，比如正弦函数：
 
@@ -50,7 +60,14 @@ print(a_size)
 2. `len(a)` ：其中`a`是参数，即“你提供给这个函数的东西”
 3. `a_size = len(a)`：会返回`a`的长度（元素的数量），你把这个结果放在变量`a_size`之中
 
+一般而言，写函数我们往往希望达到：
 
+1. 代码复用 (Reusability)：避免重复编写相同的代码块。
+2. 模块化 (Modularity)：将复杂问题分解为更小、更易于管理的部分。
+3. 可读性 (Readability)：结构清晰，易于理解代码的逻辑和意图。
+4. 可维护性 (Maintainability)：修改或调试时，只需关注特定函数。
+
+比如在数据分析中，你可能需要多次对不同的数据集进行同样的清洗操作（如去除缺失值、转换数据类型），这时把清洗步骤封装成一个函数，就可以反复使用。
 
 ## 定义一个函数
 
@@ -64,11 +81,14 @@ print(a_size)
 4. 返回关键词是`return`。如果函数执行完都没有遇到`return`，则返回`none`
 
 
-
 ![](https://www.runoob.com/wp-content/uploads/2014/05/py-tup-10-26-1.png)
 
 * 注意：这个截图中的代码有一个错误。
 
+函数命名的约定：
+
+1. 推荐使用 `snake_case` (小写字母和下划线) 命名风格
+2. 避免和内置的名称重名（如前面截图中定义的`max()`函数）。回忆我们前面说的，变量名（和函数名）只是一个标签，避免你定义的函数顶替掉内置的函数。
 
 ### 例：加法函数
 
@@ -115,8 +135,8 @@ c = add(a, b)
 print(c)
 ```
 
+
 ### 例：求两个数的最大值
- 
 
 思路：
 
@@ -268,6 +288,8 @@ print(power(3, 3))  # 调用函数传递n的值，使用传递值，结果为27
 ### 打包（packing）：处理不定数量的参数
 
 
+**打包位置参数**
+
 函数可以接受**任意多个参数**，例如求最大值的函数`max()`
 
 
@@ -311,6 +333,23 @@ print_students(5, students_list[0],students_list[1],students_list[2])
 students_list  = ["Alex","Bob","Clare"] # 这已经是一个list
 
 print_students(5, *students_list) # 自动把students_list这个List，拆成多个元素
+```
+
+**打包关键字参数**
+
+类似地，也允许函数接受任意数量的关键字参数（按参数名称传递），这些参数会被收集到一个字典中。
+
+```{python}
+def print_info_flexible(name, **other_info):
+    print(f"姓名: {name}")
+    for key, value in other_info.items():
+        print(f"{key}: {value}")
+
+print_info_flexible("Alice", age=30, city="New York", occupation="Engineer")
+# 姓名: Alice
+# age: 30
+# city: New York
+# occupation: Engineer
 ```
 
 ### 小练习
@@ -366,10 +405,13 @@ print(add(*[1,2]))
 ## 参数作为可变类型和不可变类型
 
 
+
 前面提到，多个变量名指向同一个可变对象（例如List，Dict），针对其中一个变量的修改，会引起所有指向同一个数据的变量都发生改变。
 
+把List等，作为参数传递个一个函数，也有类似的后果。因此：
 
-把List等，作为参数传递个一个函数，也有类似的后果。
+1. 当不可变类型（如数字、字符串、元组）作为参数传递时，函数内部对参数的重新赋值不会影响到函数外部的原始变量，因为这实际上是在函数内部创建了一个新的局部变量。
+2. 当可变类型（如列表、字典）作为参数传递时，函数内部对该参数内容的修改（例如 list.append() 或修改字典的键值对）会影响到函数外部的原始变量，因为函数内外的变量名指向的是内存中的同一个对象。如果想避免这种情况，应在函数内部创建该对象的副本（如使用 list.copy() 或 dict.copy()）再进行操作。
 
 下例中，
 
@@ -501,6 +543,8 @@ func()
 
 特别地，函数内部的赋值语句，其中的变量会被python看作一个local变量，如果内部未定义，就可能出错。
 
+因为Python在编译函数的字节码时，只要发现函数内部有对变量的赋值操作（如 `a = ...`），就会默认该变量是局部变量，除非显式声明为 `global` 或 `nonlocal`。
+
 ```{python eval=FALSE}
 #|eval: false
 a = 100      # 全局变量a
@@ -578,9 +622,23 @@ print(result)
 
 
 
-# 函数式编程简述（进阶）
+##  函数式编程（进阶）
 
+在我们已经熟练掌握了如何定义和使用函数之后，是时候接触一种更抽象、更数学化的编程范式了——**函数式编程 (Functional Programming)**。
 
+函数式编程强调：
+
+*   **纯函数 (Pure Functions)**：函数的输出完全由其输入决定，且没有副作用。
+*   **不可变性 (Immutability)**：数据一旦创建，就不应被修改。
+*   **高阶函数 (Higher-Order Functions)**：函数可以接受其他函数作为参数，或者返回一个函数。
+
+在本节中，我们将初步探索Python中函数式编程的一些核心工具和思想，包括：
+
+*   **`map()` 和 `filter()`**：高效处理序列数据的利器。
+*   **匿名函数 `lambda`**：快速创建简单的一次性函数。
+*   **高阶函数的概念**：理解函数如何能被灵活地传递和创建。
+*   **(选学) `reduce()`**：对序列进行累积计算。
+*   **(选学) 闭包 (Closures)**：理解函数如何“记住”其创建时的环境。
 
 ## map和filter
 ### map
@@ -813,10 +871,14 @@ result = [i * 2 for i in [1,2,3,4,5]]
 print(result)
 ```
 
+对于filter函数也一样：返回的不是列表，需要你手动转换。
+
 ```{python}
 def is_even(x):
-    return x & 1 != 0
-filter(is_even, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10])
+    return x % 2 == 0
+
+# 过滤出偶数
+print(list(filter(is_even, [1, 2, 3, 4, 5, 6, 7, 8, 9, 10])))
 ```
 
 
@@ -1031,3 +1093,29 @@ square = make_power_funcion(2)
 
 
 
+## 本章小结
+
+**本章核心回顾：**
+
+*   **函数的定义**：使用 `def` 关键字，包含函数名、参数列表、冒号和缩进的函数体。
+*   **参数传递**：理解位置参数、关键字参数、默认值、`*args` 和 `**kwargs` 的用法。
+*   **返回值**：使用 `return` 语句从函数中返回结果；若无 `return` 或 `return` 后无值，则返回 `None`。
+*   **作用域**：LEGB规则决定了变量的查找顺序，`global` 和 `nonlocal` (进阶) 关键字用于修改外部作用域的变量。
+*   **可变/不可变类型作参数**：注意可变类型（如列表）作参数时，在函数内部的修改会影响外部原对象。
+*   **函数式编程初步**：`map`、`filter` 用于对序列进行批量操作，`lambda` 用于创建简单的匿名函数。
+
+**常见错误 (Common Errors & Pitfalls)：**
+
+1.  **`UnboundLocalError: local variable 'var_name' referenced before assignment`**
+    *   **原因**：在函数内部尝试修改一个与全局变量同名的变量，但没有使用 `global` 关键字声明，Python会认为你试图引用一个尚未赋值的局部变量。
+    *   **示例**：`x = 10; def func(): x = x + 1; print(x)`，调用 `func()` 会报错。
+    *   **解决**：如果意图是修改全局变量，请在函数内部使用 `global var_name`。
+
+2.  **忘记 `return` 或 `return` 位置不当**
+    *   **原因**：函数需要返回一个计算结果，但忘记写 `return` 语句，或者 `return` 语句在逻辑上没有被执行到（例如在某个 `if` 分支内，但条件未满足）。
+    *   **结果**：函数默认返回 `None`，可能导致后续代码逻辑错误。
+    *   **解决**：仔细检查函数的逻辑，确保在所有期望的路径上都有正确的 `return` 语句。
+
+3.  **对可变类型参数副作用的忽视**
+    *   **原因**：将列表或字典等可变对象传入函数，在函数内部修改了它，导致函数外部的原始对象也被意外改变。
+    *   **解决**：如果不想修改原始对象，在函数内部应先创建副本（如使用 `.copy()` 方法）。
