--- a/book_parts/python_basics/06.5-data-structure-2.ipynb
+++ b/book_parts/python_basics/06.5-data-structure-2.ipynb
@@ -7,7 +7,16 @@
    "source": [
     "# 基本数据结构：进阶\n",
     "\n",
-    "前面介绍了常用数据结构的构建，读写数据和遍历等等，这里介绍一些关于数据结构的进阶用法。\n",
+    "在前面的学习中，我们已经掌握了Python的基本数据结构，如列表、元组和字典，了解了它们的创建、元素访问、修改以及遍历等基础操作，并且熟悉了列表推导式和字典推导式等高效构建数据结构的方法。\n",
+    "\n",
+    "本章节将在此基础上，进一步介绍数据结构的一些进阶用法和相关的内置函数。主要内容包括：\n",
+    "\n",
+    "1.  **嵌套数据结构**：学习如何构建和访问由基本数据结构相互嵌套形成的复杂数据结构。\n",
+    "2.  **排序专题**：深入讨论列表和字典的排序方法，特别是如何使用`key`参数和`lambda`函数实现自定义的复杂排序规则。\n",
+    "3.  **其他实用函数**：介绍`enumerate`、`zip`和`pop`等在数据处理中非常实用的函数及其应用场景。\n",
+    "\n",
+    "掌握这些进阶技巧，能够帮助我们更灵活、更有效地处理和组织数据，为后续进行数据分析和应用开发奠定更坚实的基础。\n",
+    "\n",
     "\n",
     "## 嵌套数据结构\n",
     "\n",
@@ -16,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -25,7 +34,7 @@
        "[1, 2, 3]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +63,7 @@
        "('C', 1)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +92,7 @@
        "(3, 4, 5)"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +129,7 @@
        "2"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +149,7 @@
        "'B'"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +169,7 @@
        "4"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +291,7 @@
        "[['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -309,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -318,7 +327,7 @@
        "[['C', 1, 2], ['B', 2, 6], ['A', 3, 1]]"
       ]
      },
-     "execution_count": 81,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -348,7 +357,7 @@
        "[['C', 1, 2], ['B', 2, 6], ['A', 3, 1]]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +393,7 @@
        "[['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -400,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -409,7 +418,7 @@
        "[['C', 1, 2], ['A', 3, 1], ['B', 2, 6]]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -440,7 +449,7 @@
        "dict_items([('A', [1, 2, 3]), ('B', (3, 4, 5)), ('C', [2, 3, 4])])"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +477,7 @@
        "[('A', [1, 2, 3]), ('C', [2, 3, 4]), ('B', (3, 4, 5))]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -505,13 +514,62 @@
        "{'A': [1, 2, 3], 'C': [2, 3, 4], 'B': (3, 4, 5)}"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dict(sorted(c.items(), key= lambda x:x[1][0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意：在 Python 3.7 及更高版本中，字典会记住元素的插入顺序。因此，当我们将排序后的 `items()` 列表（它是一个有序的元组列表）转换回字典时，新的字典会保持这个排序后的顺序。 在 Python 3.6 及更早版本中，字典不保证顺序，所以这样做可能得不到一个按值排序的有序字典。\n",
+    "\n",
+    "当然，大家当前的版本肯定都没问题。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "最后，也可以用key参数实现多级排序。`lambda` 函数可以返回一个元组，Python 在比较元组时，会按元组中元素的顺序逐个比较。\n",
+    "\n",
+    "例如：按成绩降序，成绩相同再按姓名升序。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'name': 'Bob', 'score': 92, 'age': 21}, {'name': 'Clare', 'score': 85, 'age': 19}, {'name': 'Alice', 'score': 85, 'age': 20}]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [{'name': 'Alice', 'score': 85, 'age': 20},\n",
+    "        {'name': 'Bob', 'score': 92, 'age': 21},\n",
+    "        {'name': 'Clare', 'score': 85, 'age': 19}]\n",
+    "\n",
+    "# 按分数降序，如果分数相同，则按年龄升序\n",
+    "sorted_data = sorted(data, key=lambda x: (-x['score'], x['age']))\n",
+    "# 注意：分数取负数来实现降序，年龄正常是升序\n",
+    "print(sorted_data)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "注意：同样为85分，Clare 年龄小，排在了 Alice 前面。"
    ]
   },
   {
@@ -531,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -593,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -602,7 +660,7 @@
        "[1, 2]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -625,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -654,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -663,7 +721,7 @@
        "{'a': 1, 'b': 2, 'c': 3}"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -708,7 +766,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +775,7 @@
        "3"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -742,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -751,7 +809,7 @@
        "[(1, 2, 3), ('one', 'two', 'three')]"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -763,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -811,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +895,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -873,12 +931,31 @@
     "1. 构建一个字典data，其中key是名字，value是另一个字典key和value是id和score以及对应的值。\n",
     "\n",
     "构建出来大概是这样：\n",
-    "`{'Alice': {'id': 1, 'score': 85},\n",
+    "`{'Alice': {'id': 101, 'score': 85},\n",
     " ...}`\n",
     "\n",
     "2. 对data按分数排序，高分的在前面。\n",
     "\n",
     "3. 找出分数最高的同学，打印“分数最高的同学是: ??? ，学号是???，分数是： ???。”"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "## 小结\n",
+    "\n",
+    "本章节主要介绍了Python数据结构的一些进阶操作和实用函数。我们学习了：\n",
+    "\n",
+    "*   **嵌套数据结构**的构建方式以及如何通过多级索引或键来访问其内部元素。\n",
+    "*   **列表的排序**，区分了`sorted()`函数和列表自身的`.sort()`方法，并重点掌握了通过`key`参数和`lambda`函数来定义复杂排序逻辑，例如根据嵌套列表或元组中的特定元素进行排序。\n",
+    "*   **字典的排序**，通常是对字典的键、值或键值对（items）进行排序，排序结果一般是列表，如果需要变回字典，可以使用`dict()`转换（注意Python 3.7+版本字典保持插入顺序的特性）。\n",
+    "*   **`enumerate()`函数**，它可以在遍历序列时同时返回元素的索引和值。\n",
+    "*   **`zip()`函数**，它可以将多个可迭代对象中对应位置的元素打包成一个个元组。\n",
+    "*   **`pop()`方法**，它可以从列表（按索引）或字典（按键）中移除一个元素并返回该元素的值。\n",
+    "\n",
+    "这些内容是数据处理和算法实现中经常使用的工具。熟练掌握它们，将有助于提高代码的效率和可读性，并能更有效地解决实际数据问题。建议通过课后练习，将这些知识点应用于具体的数据处理场景中，以加深理解和记忆。\n"
    ]
   }
  ],
@@ -898,7 +975,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.7"
   },
   "orig_nbformat": 4,
   "vscode": {
